# magma

.github/workflows/: amis-workflow.yml  build_all.yml
ci-scripts/: firebase_publish.py
lte/cloud/go/services/lte/obsidian/models/: enodeb_configuration_swaggergen.go  swagger.v1.yml
lte/gateway/c/core/oai/tasks/amf/: amf_app_handler.cpp  amf_app_ue_context.cpp  amf_app_ue_context_and_proc.h  amf_map.h
lte/gateway/c/core/oai/test/amf/: amf_app_test_util.cpp  amf_app_test_util.h  test_amf_encode_decode.cpp
lte/gateway/c/core/oai/test/spgw_task/: mock_spgw_op.cpp  test_spgw_procedures_with_injected_state.cpp
lte/gateway/c/core/oai/test/spgw_task/data/: sample.bin.v8
lte/gateway/python/magma/enodebd/devices/: baicells_qrtb.py  device_map.py  device_utils.py
lte/protos/mconfig/: mconfigs.proto
orc8r/cloud/go/obsidian/swagger/v1/: swagger.yml
src/go/: BUILD.bazel
src/go/agwd/config/: config.go  config_test.go
src/go/agwd/server/: BUILD.bazel  server.go
src/go/protos/: protos.go
src/go/protos/magma/mconfig/: mconfigs.pb.go
